<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:id="@+id/fotoSesionImageView"
            android:clickable="false"
            android:src="@drawable/no_photo_xsmall"
            android:contentDescription="@string/fotoContentDescription"
            android:layout_weight="0" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView android:id="@+id/nombreAlumnoSesionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/ejemplo"
                android:layout_weight="1" />

            <TextView android:id="@+id/grupoAlumnoSesionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejemplo"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/dniAlumnoGrupoTextView"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada"
                android:id="@+id/alumnoSesionEntradaCheckBox"
                android:onClick="OnAlumnoSesionEntradaCheckBoxClick" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alumnoSesionSalidaCheckBox"
                android:text="@string/salida"
                android:onClick="OnAlumnoSesionSalidaCheckBoxClick"
                android:enabled="false" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/idAlumnoRegistroTextView"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>